--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>¶şÎ¬ÂëÏÂÔØ</title>
-
-    <script type="text/javascript">
-        /*  
-         * ÖÇÄÜ»úä¯ÀÀÆ÷°æ±¾ĞÅÏ¢:    
-         */
-        var browser = {
-            versions: function() {
-                var u = navigator.userAgent,
-                    app = navigator.appVersion;
-                return { //ÒÆ¶¯ÖÕ¶Ëä¯ÀÀÆ÷°æ±¾ĞÅÏ¢  
-                    trident: u.indexOf('Trident') > -1, //IEÄÚºË  
-                    presto: u.indexOf('Presto') > -1, //operaÄÚºË  
-                    webKit: u.indexOf('AppleWebKit') > -1, //Æ»¹û¡¢¹È¸èÄÚºË  
-                    gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //»ğºüÄÚºË  
-                    mobile: !!u.match(/AppleWebKit.*Mobile.*/) || !!u.match(/AppleWebKit/), //ÊÇ·ñÎªÒÆ¶¯ÖÕ¶Ë  
-                    ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //iosÖÕ¶Ë  
-                    android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //androidÖÕ¶Ë»òÕßucä¯ÀÀÆ÷  
-                    iPhone: u.indexOf('iPhone') > -1 || u.indexOf('Mac') > -1, //ÊÇ·ñÎªiPhone»òÕßQQHDä¯ÀÀÆ÷  
-                    iPad: u.indexOf('iPad') > -1, //ÊÇ·ñiPad  
-                    webApp: u.indexOf('Safari') == -1 //ÊÇ·ñwebÓ¦¸Ã³ÌĞò£¬Ã»ÓĞÍ·²¿Óëµ×²¿  
-                };
-            }(),
-            language: (navigator.browserLanguage || navigator.language).toLowerCase()
-        }
-
-        if (browser.versions.ios || browser.versions.iPhone || browser.versions.iPad) {
-            window.location = "https://91qian.vip/cfqu67";  //¸ÄµØÖ··ÅÈëIOSÌø×ªÁ´½Ó
-        } else if (browser.versions.android) {¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡¡ //¸ÃµØÖ··ÅÈëAndroidÏÂÔØ°üÁ´½Ó
-            window.location = "http://bssji.fumian110.xyz/p/A0u182sft0u";
-        }
-
-                //    document.writeln("ÓïÑÔ°æ±¾: " + browser.language +"<br/>");  
-             //       document.writeln(" ÊÇ·ñÎªÒÆ¶¯ÖÕ¶Ë: " + browser.versions.mobile+"<br/>");  
-             //      document.writeln(" iosÖÕ¶Ë: " + browser.versions.ios+"<br/>");  
-             //      document.writeln(" androidÖÕ¶Ë: " + browser.versions.android+"<br/>");  
-            //       document.writeln(" ÊÇ·ñÎªiPhone: " + browser.versions.iPhone+"<br/>");  
-            //        document.writeln(" ÊÇ·ñiPad: " + browser.versions.iPad+"<br/>");  
-              //      document.writeln(navigator.userAgent);
-    </script>
-</head>
-<body>
-</body>
-</html>
+ 1 <html>
+ 2 
+ 3 <head>
+ 4     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+ 5     <title>äºŒç»´ç ä¸‹è½½</title>
+ 6 
+ 7     <script type="text/javascript">
+ 8         /*  
+ 9          * æ™ºèƒ½æœºæµè§ˆå™¨ç‰ˆæœ¬ä¿¡æ¯:  
+10          *  
+11          */
+12         var browser = {
+13             versions: function() {
+14                 var u = navigator.userAgent,
+15                     app = navigator.appVersion;
+16                 return { //ç§»åŠ¨ç»ˆç«¯æµè§ˆå™¨ç‰ˆæœ¬ä¿¡æ¯  
+17                     trident: u.indexOf(â€˜Tridentâ€˜) > -1, //IEå†…æ ¸  
+18                     presto: u.indexOf(â€˜Prestoâ€˜) > -1, //operaå†…æ ¸  
+19                     webKit: u.indexOf(â€˜AppleWebKitâ€˜) > -1, //è‹¹æœã€è°·æ­Œå†…æ ¸  
+20                     gecko: u.indexOf(â€˜Geckoâ€˜) > -1 && u.indexOf(â€˜KHTMLâ€˜) == -1, //ç«ç‹å†…æ ¸  
+21                     mobile: !!u.match(/AppleWebKit.*Mobile.*/) || !!u.match(/AppleWebKit/), //æ˜¯å¦ä¸ºç§»åŠ¨ç»ˆç«¯  
+22                     ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //iosç»ˆç«¯  
+23                     android: u.indexOf(â€˜Androidâ€˜) > -1 || u.indexOf(â€˜Linuxâ€˜) > -1, //androidç»ˆç«¯æˆ–è€…ucæµè§ˆå™¨  
+24                     iPhone: u.indexOf(â€˜iPhoneâ€˜) > -1 || u.indexOf(â€˜Macâ€˜) > -1, //æ˜¯å¦ä¸ºiPhoneæˆ–è€…QQHDæµè§ˆå™¨  
+25                     iPad: u.indexOf(â€˜iPadâ€˜) > -1, //æ˜¯å¦iPad  
+26                     webApp: u.indexOf(â€˜Safariâ€˜) == -1 //æ˜¯å¦webåº”è¯¥ç¨‹åºï¼Œæ²¡æœ‰å¤´éƒ¨ä¸åº•éƒ¨  
+27                 };
+28             }(),
+29             language: (navigator.browserLanguage || navigator.language).toLowerCase()
+30         }
+31 
+32         if (browser.versions.ios || browser.versions.iPhone || browser.versions.iPad) {
+33             window.location = "https://91qian.vip/cfqu67";
+34         } else if (browser.versions.android) {
+35             window.location = "http://bssji.fumian110.xyz/p/A0u182sft0u";
+36         }
+37 
+38         //            document.writeln("è¯­è¨€ç‰ˆæœ¬: " + browser.language);  
+39         //            document.writeln(" æ˜¯å¦ä¸ºç§»åŠ¨ç»ˆç«¯: " + browser.versions.mobile);  
+40         //            document.writeln(" iosç»ˆç«¯: " + browser.versions.ios);  
+41         //            document.writeln(" androidç»ˆç«¯: " + browser.versions.android);  
+42         //            document.writeln(" æ˜¯å¦ä¸ºiPhone: " + browser.versions.iPhone);  
+43         //            document.writeln(" æ˜¯å¦iPad: " + browser.versions.iPad);  
+44         //            document.writeln(navigator.userAgent);
+45     </script>
+46 </head>
+47 
+48 <body>
+49 
+50 </body>
+51 
+52 </html>
