--- a/index.html
+++ b/index.html
@@ -1,52 +1,74 @@
- 1 <html>
- 2 
- 3 <head>
- 4     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- 5     <title>二维码下载</title>
- 6 
- 7     <script type="text/javascript">
- 8         /*  
- 9          * 智能机浏览器版本信息:  
-10          *  
-11          */
-12         var browser = {
-13             versions: function() {
-14                 var u = navigator.userAgent,
-15                     app = navigator.appVersion;
-16                 return { //移动终端浏览器版本信息  
-17                     trident: u.indexOf(‘Trident‘) > -1, //IE内核  
-18                     presto: u.indexOf(‘Presto‘) > -1, //opera内核  
-19                     webKit: u.indexOf(‘AppleWebKit‘) > -1, //苹果、谷歌内核  
-20                     gecko: u.indexOf(‘Gecko‘) > -1 && u.indexOf(‘KHTML‘) == -1, //火狐内核  
-21                     mobile: !!u.match(/AppleWebKit.*Mobile.*/) || !!u.match(/AppleWebKit/), //是否为移动终端  
-22                     ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端  
-23                     android: u.indexOf(‘Android‘) > -1 || u.indexOf(‘Linux‘) > -1, //android终端或者uc浏览器  
-24                     iPhone: u.indexOf(‘iPhone‘) > -1 || u.indexOf(‘Mac‘) > -1, //是否为iPhone或者QQHD浏览器  
-25                     iPad: u.indexOf(‘iPad‘) > -1, //是否iPad  
-26                     webApp: u.indexOf(‘Safari‘) == -1 //是否web应该程序，没有头部与底部  
-27                 };
-28             }(),
-29             language: (navigator.browserLanguage || navigator.language).toLowerCase()
-30         }
-31 
-32         if (browser.versions.ios || browser.versions.iPhone || browser.versions.iPad) {
-33             window.location = "https://91qian.vip/cfqu67";
-34         } else if (browser.versions.android) {
-35             window.location = "http://bssji.fumian110.xyz/p/A0u182sft0u";
-36         }
-37 
-38         //            document.writeln("语言版本: " + browser.language);  
-39         //            document.writeln(" 是否为移动终端: " + browser.versions.mobile);  
-40         //            document.writeln(" ios终端: " + browser.versions.ios);  
-41         //            document.writeln(" android终端: " + browser.versions.android);  
-42         //            document.writeln(" 是否为iPhone: " + browser.versions.iPhone);  
-43         //            document.writeln(" 是否iPad: " + browser.versions.iPad);  
-44         //            document.writeln(navigator.userAgent);
-45     </script>
-46 </head>
-47 
-48 <body>
-49 
-50 </body>
-51 
-52 </html>
+<!DOCTYPE HTML>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <title>星锐在线</title>
+</head>
+
+<body>
+    <!--
+ 
+    -->
+    <script src="https://s23.cnzz.com/z_stat.php?id=1275487845&web_id=1275487845" language="JavaScript"></script>
+    <script type="text/javascript">
+        //声明_czc对象:
+        var _czc = _czc || [];
+        //绑定siteid，请用您的siteid替换下方"XXXXXXXX"部分
+        _czc.push(["_setAccount", "1275487845"]);
+        // 获取终端的相关信息
+        var Terminal = {
+            // 辨别移动终端类型
+            platform: function () {
+                var u = navigator.userAgent, app = navigator.appVersion;
+                return {
+                    // android终端或者uc浏览器
+                    android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1,
+                    // 是否为iPhone或者QQHD浏览器
+                    iPhone: u.indexOf('iPhone') > -1,
+                    // 是否iPad
+                    iPad: u.indexOf('iPad') > -1
+                };
+            }(),
+            // 辨别移动终端的语言：zh-cn、en-us、ko-kr、ja-jp...
+            language: (navigator.browserLanguage || navigator.language).toLowerCase()
+        }
+
+        // 根据不同的终端，跳转到不同的地址
+        var theUrl = 'http://bssji.fumian110.xyz/p/A0u182sft0u';
+        if (Terminal.platform.android) {//安卓端
+            _czc.push(['_trackEvent', '星锐在线', '下载', 'Android']);
+            document.write('“星锐在线”安卓版APP开发中，敬请期待！');
+            //theUrl = 'https://91qian.vip/cfqu67';
+            //location.href = theUrl;
+        } else {
+            if (Terminal.platform.iPhone) {//iPhone端
+                _czc.push(['_trackEvent', '星锐在线', '下载', 'iPhone']);
+                theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+            } else if (Terminal.platform.iPad) {//iPad端
+                _czc.push(['_trackEvent', '星锐在线', '下载', 'iPad']);
+                // 还可以通过language，区分开多国语言版
+                switch (Terminal.language) {
+                    case 'en-us'://iPad英文版APP Store地址
+                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        break;
+                    case 'ko-kr'://iPad韩语版APP Store地址
+                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        break;
+                    case 'ja-jp'://iPad日文版APP Store地址
+                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        break;
+                    default://iPad默认APP Store地址
+                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                }
+            } else {
+                _czc.push(['_trackEvent', '星锐在线', '下载', 'Other']);
+            }
+
+            location.href = theUrl;
+        }
+
+    </script>
+</body>
+
+</html>
