--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         //声明_czc对象:
         var _czc = _czc || [];
         //绑定siteid，请用您的siteid替换下方"XXXXXXXX"部分
-        _czc.push(["_setAccount", "1275487845"]);
         // 获取终端的相关信息
         var Terminal = {
             // 辨别移动终端类型
@@ -44,22 +43,22 @@
         } else {
             if (Terminal.platform.iPhone) {//iPhone端
                 _czc.push(['_trackEvent', '星锐在线', '下载', 'iPhone']);
-                theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                theUrl = 'https://91qian.vip/cfqu67';
             } else if (Terminal.platform.iPad) {//iPad端
                 _czc.push(['_trackEvent', '星锐在线', '下载', 'iPad']);
                 // 还可以通过language，区分开多国语言版
                 switch (Terminal.language) {
                     case 'en-us'://iPad英文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://91qian.vip/cfqu67';
                         break;
                     case 'ko-kr'://iPad韩语版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://91qian.vip/cfqu67';
                         break;
                     case 'ja-jp'://iPad日文版APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://91qian.vip/cfqu67';
                         break;
                     default://iPad默认APP Store地址
-                        theUrl = 'https://itunes.apple.com/cn/app/id1299542018';
+                        theUrl = 'https://91qian.vip/cfqu67';
                 }
             } else {
                 _czc.push(['_trackEvent', '星锐在线', '下载', 'Other']);
