--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>手机APP下载页面：根据终端辨别下载地址</title>
+    <title>星锐在线APP下载</title>
     <script type="text/javascript">
         // 获取终端的相关信息
         var Terminal = {
